[package]
name = "aoc2020"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
paste = "1.0.9"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "aoc2020_benchmarks"
harness = false

[profile.bench]
lto = true